Scrollbar styles fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 
 /* custom scrollbar */
 ::-webkit-scrollbar {
-	width: 16px;
+	width: 14px;
 }
 
 ::-webkit-scrollbar-track {
@@ -16,15 +16,19 @@
 }
 
 ::-webkit-scrollbar-thumb {
-	@apply bg-slate-300;
-	border-radius: 15px 0 0 20px;
-	border: 6px solid transparent;
+	@apply bg-slate-400;
+	border-radius: 15px 0 0 15px;
+	border: 4px solid transparent;
 	background-clip: content-box;
 	@apply border-r-0;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	@apply bg-slate-400;
+	@apply bg-slate-500;
+}
+
+.custom_scrollbar::-webkit-scrollbar {
+	width: 18px;
 }
 
 .custom_scrollbar::-webkit-scrollbar-thumb {
